fixed navbar overlap

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -3,6 +3,6 @@
 	width: auto;
 }
 
-body > .container {
-	padding-top: 85px;
+body {
+	padding-top: 84px;
 }
